--- a/style.css
+++ b/style.css
@@ -49,10 +49,10 @@
   color: #8e8e8e;
 }
 .avatar {
-    border-radius: 50%;
     width: 30%;
-
     margin: 5rem;
+    padding:3rem;
+    border-radius: 50%;
 
 }
 
