--- a/css/style.css
+++ b/css/style.css
@@ -49,10 +49,10 @@
   color: #8e8e8e;
 }
 .avatar {
-    border-radius: 50%;
     width: 30%;
-    margin-top: 5rem;
-    margin-bottom: 5rem;
+    margin: 5rem;
+    padding:3rem;
+    border-radius: 50%;
 
 }
 
