--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ figure {
   height: 100%;
 }
 #fixed {
-  background-image: url('img/mac.png');
+  background-image: url('../img/officeview_2x.jpg');
   position: fixed;
   display: block;
   top: 0;
