--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');
 
 
-
 .container-full {
 
   width: 100%;
   height: 100%;
   min-height: 100%;
+
 
 }
 
@@ -34,6 +34,13 @@
 
   color: white;
 
+}
+.navbar{
+  overflow: hidden;
+  background-color: #333;
+  position: fixed; /* Set the navbar to fixed position */
+  top: 0; /* Position the navbar at the top of the page */
+  width: 100%; /* Full width */
 }
 .nav-color{
   color: #556168;
@@ -72,6 +79,15 @@
     text-decoration: none;
     color: #ffffff;
 }
+.darkicon a{
+    padding: 1.5rem;
+    font-size: 2.5em;
+    width: 60px;
+    text-align: center;
+    text-decoration: none;
+    color: #717782;
+}
+
 .uppercase{
   text-transform: uppercase;
 
