--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,7 @@
   .titlepadding{
     padding-top: 4em;
     padding: 0px;
-    margin-top:10rem;
+    margin-top:10rem !important;
 
   }
 
@@ -170,11 +170,10 @@ body, html {
 
 }
 footer{
+
   font-family: 'Questrial', sans-serif;
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  
+
 
 }
 p{
