--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
 /* Hero Image*/
 .hero-image {
     /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
-    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url("../img/team2.png");
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url("../img/team2.jpg");
 
     /* Set a specific height */
     height: 100%;
@@ -172,7 +172,7 @@ body, html {
 footer{
 
   font-family: 'Questrial', sans-serif;
-  
+
 
 
 }
