fixed video width

--- a/css/style.css
+++ b/css/style.css
@@ -16,12 +16,12 @@
     left: 50%;
     min-width: 100%;
     min-height: 100%;
-    width: auto;
+    width: 100%;
     height: auto;
     z-index: -100;
     -webkit-transform: translateX(-50%) translateY(-50%);
     transform: translateX(-50%) translateY(-50%);
-    background: url(polina.jpg) no-repeat;
+    background: url(../img/website header.jpg) no-repeat;
     background-size: cover;
 }
 .container h1 {
