--- a/css/style.css
+++ b/css/style.css
@@ -11,16 +11,17 @@
 }
 
 #background {
+
     position: relative;
     top: 50%;
     left: 50%;
     min-width: 100%;
     min-height: 100%;
-    width: 100%;
+    width: auto;
     height: auto;
     z-index: -100;
-    -webkit-transform: translateX(-50%) translateY(-50%);
-    transform: translateX(-50%) translateY(-50%);
+    -webkit-transform: translateX(-50%) translateY(-20%);
+    transform: translateX(-50%) translateY(-20%);
     background: url(../img/website header.jpg) no-repeat;
     background-size: cover;
 }
