--- a/css/style.css
+++ b/css/style.css
@@ -77,9 +77,9 @@ header .overlay {
   z-index: 1;
 }
 
-@media (pointer: coarse) and (hover: none) {
+@media (max-width: 768px) {
   header {
-    background:  "./img/website header.jpg" black no-repeat center center scroll;
+    background:  "../img/website header.jpg" black no-repeat center center scroll;
   }
   header video {
     display: none;
@@ -175,6 +175,7 @@ header .overlay {
   position: fixed; /* Set the navbar to fixed position */
   top: 0; /* Position the navbar at the top of the page */
   width: 100%; /* Full width */
+  height: 4em;
 
 }
 .nav-color{
